@@ -5115,3 +5115,4 @@
   State.isActive() and setActive() renamed to get() and set() respectively
   ValueChange.getOldValue() and getNewValue() renamed to getPreviousValue() and getCurrentValue() respectively
   IntelliJ code analysis based fixes
+  StringParser removed, replaced with Function<String, ?>
